# Backend-team3

./: Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml  pytest.ini  requirements.txt  settings.py
app/core/picture/: picture_helper.py
app/core/shared/: entity.py  exception_base.py  usecase_base.py
app/infrastracture/: __init__.py  connect.py  es_connect.py  websoket.py
app/infrastracture/dao/: base.py  category_read.py  category_write.py  chat_read.py  chat_write.py  item_read.py  item_write.py  message_read.py  message_write.py  picture_item_relation_read.py  picture_item_relation_write.py  picture_read.py  picture_write.py  token_read.py  token_write.py  user_read.py  user_write.py
app/infrastracture/models/: cart.py  category.py  chat.py  favourite.py  item.py  message.py  picture.py  picture_item_relation.py  review.py  sale_item_relation.py  sold_item_relation.py  token.py  user.py
app/infrastructure/: connect.py
app/infrastructure/dao/: base.py  item_read.py  item_write.py
app/presentation/: bearer.py  routes.py
app/presentation/api/: main.py  routes.py
app/presentation/di/: __init__.py  (+3 more)
app/shared/: dto_base.py
auth/: jwt.py
config/: .env  config.py  db.py
helpers/: save_picture.py
models/: auth.py  category.py  chat.py  item.py  photo_item_relation.py  user.py
routes/: auth.py  category.py  item.py  photo_item_relation.py  routes.py  user.py
schemas/: category.py  item.py  photo_item_relation.py  user.py
templates/: chat.html  cors_test.html
templates/forms/: category.html
tests/unit/: test_unit.py
(+250 files in other folders)
